# Bowties

./: .clocignore  .gitignore  .mcp.json  Bowties.code-workspace  LICENSE-APACHE  LICENSE-MIT  README.md
.githooks/: pre-push
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/.svelte-kit/: ambient.d.ts
app/src-tauri/capabilities/: default.json  traffic.json
app/src-tauri/icons/: icon.icns
app/src-tauri/nsis/: pre-install.nsi
app/src-tauri/profiles/: Mustangpeak-Engineering_TurnoutBoss.profile.yaml  OpenMRN_async_blink.profile.yaml  RR-CirKits.shared-daughterboards.yaml  RR-CirKits_Inc._Signal-LCC.profile.yaml  RR-CirKits_Signal-LCC-32H.profile.yaml  RR-CirKits_Signal-LCC-P.profile.yaml  RR-CirKits_Signal-LCC-S.profile.yaml  RR-CirKits_Tower-LCC.profile.yaml
app/src-tauri/src/: diagnostics.rs  lib.rs  main.rs  menu.rs  node_key.rs  node_proxy.rs  node_registry.rs  node_tree.rs  placeholder.rs  state.rs
app/src-tauri/src/cdi/: bundle.rs  mod.rs
app/src-tauri/src/commands/: behavior_templates.rs  bowties.rs  cdi.rs  channel_events.rs  channels.rs  connection.rs  connector_profiles.rs  discovery.rs  facilities.rs  facility_bowties.rs  layout_capture.rs  layout_drafts.rs  mod.rs  placeholders.rs  startup.rs  sync_panel.rs
app/src-tauri/src/events/: mod.rs  router.rs
app/src-tauri/src/layout/: io.rs  journal.rs  known_layouts.rs  manifest.rs  mod.rs  node_snapshot.rs  offline_changes.rs  types.rs
app/src-tauri/src/profile/: loader.rs  mod.rs  resolver.rs  types.rs
app/src-tauri/src/traffic/: mod.rs
bowties-core/: Cargo.toml
bowties-core/src/: behavior_templates.rs  channel_events.rs  lib.rs  node_key.rs  node_proxy.rs  node_registry.rs  node_tree.rs  placeholder.rs
bowties-core/src/bowtie/: catalog.rs  mod.rs  types.rs
bowties-core/src/facility_bowties/: mod.rs
bowties-core/src/layout/: capture.rs  channels.rs  facilities.rs  io.rs  journal.rs  manifest.rs  mod.rs  node_snapshot.rs  offline_changes.rs  serde_node_id.rs  state.rs  types.rs
bowties-core/src/profile/: mod.rs  resolver.rs  types.rs
bowties-core/src/sync/: changes.rs  classifier.rs  field_meta.rs  mod.rs
bowties-core/tests/: bundled_profiles_smoke.rs
bowties-core/tests/fixtures/profiles/: RR-CirKits.shared-daughterboards.yaml  RR-CirKits_Signal-LCC-P.profile.yaml  (+1 more)
lcc-rs/: Cargo.toml  README.md  TESTING_SUMMARY.md
lcc-rs/proptest-regressions/protocol/: memory_config.txt
lcc-rs/src/: alias_allocation.rs  constants.rs  datagram_reader.rs  discovery.rs  dispatcher.rs  lib.rs  peer_session.rs  peer_session_registry.rs  pip.rs  snip.rs  transport_actor.rs  types.rs
lcc-rs/src/cdi/: hierarchy.rs  mod.rs  parser.rs  role.rs
lcc-rs/src/protocol/: datagram.rs  frame.rs  memory_config.rs  mod.rs  mti.rs
lcc-rs/src/transport/: gridconnect_async.rs  gridconnect_serial.rs  mock.rs  mod.rs  slcan_serial.rs  tcp.rs
lcc-rs/tests/: cdi_parsing.rs  peer_session_cdi.rs  peer_session_config.rs  peer_session_registry.rs  peer_session_snip_pip.rs  protocol_integration.rs
tools/cdi-probe/: Cargo.toml  README.md
tools/cdi-probe/src/: blocking_test.rs  main.rs
(+705 files in other folders)
