[package]
name = "bowties-core"
version = "0.2.1"
edition = "2021"
authors = ["LCC Contributors"]
description = "Bowties domain logic — node trees, layout persistence, profile resolution, and registry management"
license = "MIT OR Apache-2.0"

[dependencies]
lcc-rs = { path = "../lcc-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
tokio = { version = "1.41", features = ["sync", "fs", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.41", features = ["full", "test-util"] }
