[package]
name = "lcc-rs"
version = "0.2.0"
edition = "2021"
authors = ["LCC Contributors"]
description = "Rust implementation of the Layout Command Control (LCC/OpenLCB) protocol"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.41", features = ["net", "io-util", "time", "rt", "rt-multi-thread", "sync", "macros"] }
tokio-serial = "5.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
async-trait = "0.1"
socket2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
roxmltree = "0.20"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.5"
hex = "0.4"
