[package]
name = "cdi-probe"
version = "0.1.0"
edition = "2021"
description = "CLI diagnostic tool for LCC node discovery and CDI download timing"
license = "MIT OR Apache-2.0"

[[bin]]
name = "cdi-probe"
path = "src/main.rs"

[dependencies]
lcc-rs = { path = "../../lcc-rs" }
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "time", "sync"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.8"

[[bin]]
name = "blocking-test"
path = "src/blocking_test.rs"
